--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -9,6 +9,29 @@ def the_json
 def repo_name
 
 
+def Process(oss, build_folder, commit, url, profile, ref){
+    withPythonEnv('python'){
+         command = "pip install conan"
+         if(oss == "Windows"){
+           bat script: command
+         }
+         else{
+           sh script: command
+         }
+         dir(build_folder){
+           checkout([$class: 'GitSCM', branches: [[name: commit ]], userRemoteConfigs: [[url: url]]])
+           writeFile file: "_profile.txt", text: profile
+           def server = Artifactory.newServer url: arti_instance, credentialsId: credential
+           def client = Artifactory.newConanClient(userHome: build_folder)
+           def remoteName = client.remote.add server: server, repo: repo_name
+           client.run(command: "create . ${ref}  -pr _profile.txt".toString())
+           client.run(command: "remote list")
+           def b = client.run(command: "upload ${ref} -r '${remoteName}' --all -c".toString())
+           server.publishBuildInfo b
+         }
+    }
+}
+
 node("Linux"){
   stage("Generate builds"){
     def basedir = pwd()
@@ -48,6 +71,7 @@ the_json["groups"].eachWithIndex { group, gix ->
 
           echo ref
           echo profile
+          echo conf
 
           def curdir = pwd().toString()
           def build_folder = "${curdir}/package_repo".toString()
@@ -55,25 +79,15 @@ the_json["groups"].eachWithIndex { group, gix ->
             build_folder = win_tmp_path + "/${env.BUILD_NUMBER}_${gix}_${cdx}"
           }
 
-          withPythonEnv('python'){
-             command = "pip install conan"
-             if(oss == "Windows"){
-               bat script: command
-             }
-             else{
-               sh script: command
-             }
-             dir(build_folder){
-               checkout([$class: 'GitSCM', branches: [[name: commit ]], userRemoteConfigs: [[url: url]]])
-               writeFile file: "_profile.txt", text: profile
-               def server = Artifactory.newServer url: arti_instance, credentialsId: credential
-               def client = Artifactory.newConanClient(userHome: build_folder)
-               def remoteName = client.remote.add server: server, repo: repo_name
-               client.run(command: "create . ${ref}  -pr _profile.txt".toString())
-               client.run(command: "remote list")
-               def b = client.run(command: "upload ${ref} -r '${remoteName}' --all -c".toString())
-               server.publishBuildInfo b
-             }
+          if(conf["docker_image"]){
+              def image = conf["docker_image"]
+              sh "docker pull $image"
+              docker.image(image).inside("-e CONAN_USER_HOME=${curdir} -v${curdir}:${curdir}") {
+                  Process(oss, build_folder, commit, url, profile, ref)
+              }
+          }
+          else{
+                Process(oss, build_folder, commit, url, profile, ref)
           }
         }
       }
