--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -23,7 +23,7 @@ def Run(command, sudo){
 def Process(oss, build_folder, commit, url, profile, ref){
     Run("pip install virtualenv", sudo=True)
     withPythonEnv('python'){
-         PipInstall("conan")
+         Run("pip install conan --upgrade")
          dir(build_folder){
            checkout([$class: 'GitSCM', branches: [[name: commit ]], userRemoteConfigs: [[url: url]]])
            writeFile file: "_profile.txt", text: profile
