--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -26,6 +26,8 @@ def Process(oss, build_folder, commit, url, profile, ref, arti_instance, credent
          Run("pip install conan --upgrade")
          dir(build_folder){
            checkout([$class: 'GitSCM', branches: [[name: commit ]], userRemoteConfigs: [[url: url]]])
+           echo pwd().toString()
+           Run("ls -la")
            writeFile file: "_profile.txt", text: profile
            def server = Artifactory.newServer url: arti_instance, credentialsId: credential
            def client = Artifactory.newConanClient(userHome: build_folder)
