--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -28,7 +28,7 @@ def Process(oss, build_folder, commit, url, profile, ref, arti_instance, credent
          dir(build_folder){
             checkout([$class: 'GitSCM', branches: [[name: commit ]], userRemoteConfigs: [[url: url]]])
             echo pwd().toString()
-            Run("ls -la")
+            Run("ls -la ${build_folder}")
             writeFile file: "_profile.txt", text: profile
             def server = Artifactory.newServer url: arti_instance, credentialsId: credential
             def client = Artifactory.newConanClient(userHome: build_folder)
