--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -33,7 +33,7 @@ def Process(oss, build_folder, commit, url, profile, ref, arti_instance, credent
             def server = Artifactory.newServer url: arti_instance, credentialsId: credential
             def client = Artifactory.newConanClient(userHome: build_folder)
             def remoteName = client.remote.add server: server, repo: repo_name
-            client.run(command: "create . ${ref}  -pr _profile.txt".toString())
+            client.run(command: "create ${build_folder} ${ref}  -pr _profile.txt".toString())
             client.run(command: "remote list")
             def b = client.run(command: "upload ${ref} -r '${remoteName}' --all -c".toString())
             server.publishBuildInfo b
