--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -24,9 +24,9 @@ def Process(build_folder, commit, url, profile, ref, arti_instance, credential, 
     //Run("pip install virtualenv", true)
     withPythonEnv('python'){
          Run("pip install conan --upgrade")
-         Run("git config --global core.autocrlf input")
-         echo "BUILD FOLDER: ${build_folder}"git 
+         echo "BUILD FOLDER: ${build_folder}"git
          dir(build_folder){
+            Run("git config --global core.autocrlf")
             checkout([$class: 'GitSCM', branches: [[name: commit ]], userRemoteConfigs: [[url: url]]])
             writeFile file: "${build_folder}/_profile.txt", text: profile
             def server = Artifactory.newServer url: arti_instance, credentialsId: credential
