--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -27,10 +27,10 @@ def Process(build_folder, commit, url, profile, ref, arti_instance, credential, 
          echo "BUILD FOLDER: ${build_folder}"
          dir(build_folder){
             if(!isUnix()){
-               Run("git config --global core.autocrlf true")
+               Run("git config core.autocrlf true")
             }
             else{
-               Run("git config --global core.autocrlf input")
+               Run("git config core.autocrlf input")
             }
             checkout([$class: 'GitSCM', branches: [[name: commit ]], userRemoteConfigs: [[url: url]]])
             writeFile file: "${build_folder}/_profile.txt", text: profile
