--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -5,8 +5,30 @@ def core_repo = "https://github.com/lasote/c3i_core.git"
 
 def win_tmp_path = "D:/c3ipr"
 def json_file_path = 'c3i_configs.json'
+def repo_name = "c3i_${env.BRANCH_NAME}_${env.BUILD_NUMBER}".toString()
 def the_json
-def repo_name
+
+def abortPreviousRunningBuilds() {
+  def hi = Hudson.instance
+  def pname = env.JOB_NAME.split('/')[0]
+
+  hi.getItem(pname).getItem(env.JOB_BASE_NAME).getBuilds().each{ build ->
+    def exec = build.getExecutor()
+
+    if (build.number != currentBuild.number && exec != null) {
+      exec.interrupt(
+        Result.ABORTED,
+        new CauseOfInterruption.UserInterruption(
+          "Aborted by #${currentBuild.number}"
+        )
+      )
+      println("Aborted previous running build #${build.number}")
+    } else {
+      println("Build is not running or is current build, not aborting - #${build.number}")
+    }
+  }
+}
+
 
 def Run(command, sudo=false){
     if(!isUnix()){
@@ -43,7 +65,7 @@ def Process(build_folder, commit, url, profile, ref, arti_instance, credential, 
 }
 
 node("Linux"){
-  stage("Generate builds"){
+  stage("Generate builds: "){
     echo "${env.BRANCH_NAME}"
     def basedir = pwd()
     def scmVars = checkout scm
@@ -53,9 +75,8 @@ node("Linux"){
       the_json = readJSON file: json_file_path
     }
   }
-  stage("Create Build Artifactory repo"){
+  stage("Create Build Artifactory: ${repo_name}"){
     def server = Artifactory.server artifactory_name
-    repo_name = "c3i_${env.BRANCH_NAME}_${env.BUILD_NUMBER}".toString()
     def config = "{ \"key\": \"${repo_name}\", \"rclass\": \"local\", \"packageType\": \"conan\"}"
     // TODO: Get url from arti server?
     def url = "${arti_instance}/api/repositories/${repo_name}"
