--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -30,16 +30,18 @@ def abortPreviousRunningBuilds() {
 }
 
 
-def Run(command, sudo=false){
+def Run(command, sudo=false, returnStatus=false){
+    def ret
     if(!isUnix()){
-      bat script: command
+      ret = bat script: command, returnStatus: returnStatus
     }
     else{
       if(sudo){
         command = "sudo " + command
       }
-      sh script: command
+        ret = sh script: command, returnStatus: returnStatus
     }
+    return ret
 }
 
 def Process(build_folder, commit, url, profile, ref, arti_instance, credential, repo_name){
@@ -56,10 +58,19 @@ def Process(build_folder, commit, url, profile, ref, arti_instance, credential, 
             def server = Artifactory.newServer url: arti_instance, credentialsId: credential
             def client = Artifactory.newConanClient(userHome: build_folder)
             def remoteName = client.remote.add server: server, repo: repo_name
-            client.run(command: "create ${build_folder} ${ref}  -pr ${build_folder}/_profile.txt".toString())
-            client.run(command: "remote list")
-            def b = client.run(command: "upload ${ref} -r '${remoteName}' --all -c".toString())
-            server.publishBuildInfo b
+            def create = "create ${build_folder} ${ref}  -pr ${build_folder}/_profile.txt".toString()
+            def ret = Run(create)
+            if(ret == 6){
+              echo "Skipping configuration!"
+            }
+            else if(ret == 0){
+              client.run(command: "remote list")
+              def b = client.run(command: "upload ${ref} -r '${remoteName}' --all -c".toString())
+              server.publishBuildInfo b
+            }
+            else{
+                throw new Exception("Conan create error ${ret}")
+            }
          }
     }
 }
