--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -60,7 +60,7 @@ def Process(build_folder, commit, url, profile, ref, arti_instance, credential, 
             def remoteName = client.remote.add server: server, repo: repo_name
 
             withEnv(["CONAN_USER_HOME=${build_folder}"]){
-                def install = "conan install ${build_folder} ${ref} -pr ${build_folder}/_profile.txt --build never -r ${remoteName}".toString()
+                def install = "conan install ${ref} -pr ${build_folder}/_profile.txt --build never -r ${remoteName}".toString()
                 def ret = Run(install, false, true)
                 if(ret != 0){
                     def create = "conan create ${build_folder} ${ref} -pr ${build_folder}/_profile.txt".toString()
