--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -122,6 +122,20 @@ the_json["stages"].eachWithIndex { group, gix ->
 
     builders["${oss} - Stage ${gix} - Build ${cdx}"] = {
       node(oss) {
+        stage("${oss} - Provision"){
+            if(oss == "c3i-docker"){ // REMOVE THIS WHEN THE IMAGES ARE CORRECT
+                sh 'docker version'
+                sh 'python3 -V'
+                sh 'apt-get update'
+                sh 'apt-get install -y python3-pip'
+                sh 'pip3 install --upgrade pip'
+                sh 'pip -V'
+                //sh 'pip install conan'
+                sh 'pip install conan-package-tools'
+                sh 'conan -v'
+                sh 'python3 run.py'
+            }
+        }
         stage("${oss} - Stage ${gix} - Build ${cdx}"){
           echo ref
           echo profile
