--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -46,43 +46,43 @@ def Run(command, sudo=false, returnStatus=false){
 
 def Process(build_folder, commit, url, profile, ref, arti_instance, credential, repo_name){
     //Run("pip install virtualenv", true)
-    withPythonEnv('python3'){
-         Run("pip install conan --upgrade")
-         echo "BUILD FOLDER: ${build_folder}"
-         dir(build_folder){
-            if(!isUnix()){
-               Run("git config --global core.autocrlf false")
-            }
-            checkout([$class: 'GitSCM', branches: [[name: commit ]], userRemoteConfigs: [[url: url]]])
-            writeFile file: "${build_folder}/_profile.txt", text: profile
-            def server = Artifactory.newServer url: arti_instance, credentialsId: credential
-            def client = Artifactory.newConanClient(userHome: build_folder)
-            def remoteName = client.remote.add server: server, repo: repo_name
 
-            withEnv(["CONAN_USER_HOME=${build_folder}"]){
-                def install = "conan install ${ref} -pr ${build_folder}/_profile.txt --build never -r ${remoteName}".toString()
-                def ret = Run(install, false, true)
-                if(ret != 0){
-                    def create = "conan create ${build_folder} ${ref} -pr ${build_folder}/_profile.txt".toString()
-                    ret = Run(create, false, true)
-                    if(ret == 6){
-                      echo "Skipping configuration!"
-                    }
-                    else if(ret == 0){
-                      client.run(command: "remote list")
-                      def b = client.run(command: "upload ${ref} -r '${remoteName}' --all -c".toString())
-                      server.publishBuildInfo b
-                    }
-                    else{
-                        throw new Exception("Conan create error ${ret}")
-                    }
+     Run("pip install conan --upgrade")
+     echo "BUILD FOLDER: ${build_folder}"
+     dir(build_folder){
+        if(!isUnix()){
+           Run("git config --global core.autocrlf false")
+        }
+        checkout([$class: 'GitSCM', branches: [[name: commit ]], userRemoteConfigs: [[url: url]]])
+        writeFile file: "${build_folder}/_profile.txt", text: profile
+        def server = Artifactory.newServer url: arti_instance, credentialsId: credential
+        def client = Artifactory.newConanClient(userHome: build_folder)
+        def remoteName = client.remote.add server: server, repo: repo_name
+
+        withEnv(["CONAN_USER_HOME=${build_folder}"]){
+            def install = "conan install ${ref} -pr ${build_folder}/_profile.txt --build never -r ${remoteName}".toString()
+            def ret = Run(install, false, true)
+            if(ret != 0){
+                def create = "conan create ${build_folder} ${ref} -pr ${build_folder}/_profile.txt".toString()
+                ret = Run(create, false, true)
+                if(ret == 6){
+                  echo "Skipping configuration!"
+                }
+                else if(ret == 0){
+                  client.run(command: "remote list")
+                  def b = client.run(command: "upload ${ref} -r '${remoteName}' --all -c".toString())
+                  server.publishBuildInfo b
                 }
                 else{
-                    echo "Skipping, binary already found in the repository!"
+                    throw new Exception("Conan create error ${ret}")
                 }
             }
-         }
-    }
+            else{
+                echo "Skipping, binary already found in the repository!"
+            }
+        }
+     }
+
 }
 
 node("Linux"){
@@ -148,7 +148,14 @@ the_json["stages"].eachWithIndex { group, gix ->
               env = ['PATH=/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin']
           }
           withEnv(env) {
+            if(oss != "c3i-docker"){
+                withPythonEnv('python'){
+                    Process(build_folder, commit, url, profile, ref, arti_instance, credential, repo_name)
+                }
+            }
+            else{
                 Process(build_folder, commit, url, profile, ref, arti_instance, credential, repo_name)
+            }
           }
         }
       }
