--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -133,6 +133,13 @@ the_json["stages"].eachWithIndex { group, gix ->
                 sh 'pip3 install virtualenv'
                 sh 'conan -v'
             }
+            else if(oss == "Macos"){
+                sh 'pip install virtualenv'
+            }
+            else if(oss == "Windows"){
+                bat 'pip install virtualenv'
+            }
+
         }
         stage("${oss} - Stage ${gix} - Build ${cdx}"){
           echo ref
