--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -69,6 +69,7 @@ if(current_branch == "master"){
         stage("Merge PR packages"){
             def commit_message = sh(returnStdout: true, script: 'git show -s --format="format:%s"').trim()
             dir(".c3_core") {
+               Run("pip install -r c3i/requirements.txt")
                git branch: 'master', url: core_repo
                withCredentials([usernameColonPassword(credentialsId: credential, variable: 'USER_PASS')]) {
                   sh '''
