--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -72,10 +72,7 @@ if(current_branch == "master"){
                git branch: 'master', url: core_repo
                Run("pip install -r c3i/requirements.txt")
                withCredentials([usernameColonPassword(credentialsId: credential, variable: 'USER_PASS')]) {
-                  sh '''
-                     set +x
-                     ./c3i/util/merge_pr.sh ${arti_instance} $USER_PASS "${commit_message}"
-                  '''
+                  sh script: "./c3i/util/merge_pr.sh ${arti_instance} $USER_PASS "${commit_message}"
                }
             }
         }
@@ -95,10 +92,7 @@ else{
        }
        stage("Create Build Artifactory: ${repo_name}"){
           withCredentials([usernameColonPassword(credentialsId: credential, variable: 'USER_PASS')]) {
-              sh '''
-                 set +x
-                 ./c3i/util/create_repo.sh ${arti_instance} ${repo_name} $USER_PASS
-               '''
+              sh script: "./c3i/util/create_repo.sh ${arti_instance} ${repo_name} $USER_PASS"
           }
        }
     }
