--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -77,7 +77,7 @@ if(current_branch == "master"){
                Run("pip install -r c3i/requirements.txt")
                withCredentials([usernameColonPassword(credentialsId: credential, variable: 'USER_PASS')]) {
                   withEnv(["COMMIT_MESSAGE=${commit_message}"]){ // I'm not able to pass quoted message without failing...
-                      def command = $/./c3i/util/merge_pr.sh ${arti_instance} $$USER_PASS/$
+                      def command = $/./c3i/pull_request/bin/merge_pr.sh ${arti_instance} $$USER_PASS/$
                       sh command
                   }
                }
@@ -89,24 +89,24 @@ else{
     node("Linux"){
        stage("Calculate builds: "){
           checkout scm
+          def commit = sh(returnStdout: true, script: 'git rev-parse HEAD').trim()
+          def commit_short = commit.substring(0,7)
+          def c3i_build_number = "${env.BUILD_NUMBER}"
+          repo_name = "c3i_${env.BRANCH_NAME}_${commit_short}".toString()
           echo "${env.BRANCH_NAME}"
           def basedir = pwd()
           dir(".c3_core") {
              git branch: 'master', url: core_repo
              Run("pip install -r c3i/requirements.txt")
-             sh(script: "./c3i/pull_request/launch.sh ${basedir} ${json_file_path}")
+             sh(script: "./c3i/pull_request/bin/calculate_builds.sh ${basedir} ${json_file_path} ${repo_name}")
              the_json = readJSON file: json_file_path
           }
        }
        stage("Create Build Artifactory:"){
           withCredentials([usernameColonPassword(credentialsId: credential, variable: 'USER_PASS')]) {
-              def commit = sh(returnStdout: true, script: 'git rev-parse HEAD').trim()
-              def commit_short = commit.substring(0,7)
-              def description = "${env.BUILD_NUMBER}"
-              repo_name = "c3i_${env.BRANCH_NAME}_${commit_short}".toString()
               dir(".c3_core") {
                 git branch: 'master', url: core_repo
-                def command = $/./c3i/util/create_repo.sh ${arti_instance} ${repo_name} ${description} $$USER_PASS/$
+                def command = $/./c3i/pull_request/bin/init_repo.sh ${arti_instance} ${repo_name} ${c3i_build_number} $$USER_PASS/$
                 sh command
               }
           }
@@ -119,7 +119,8 @@ else{
         def oss = conf["oss"]
         def commit = conf["commit"].toString()
         def ref = conf["ref"].toString()
-        def profile = conf["txt"].toString()
+        def profile = conf["profile"].toString()
+        def profile_id = conf["profile_id"].toString()
         def url = conf["url"].toString()
         def uid = "${env.BRANCH_NAME}_${env.BUILD_NUMBER}_${gix}_${cdx}"
 
@@ -158,15 +159,29 @@ else{
               if(oss == "Macos"){
                   env = ['PATH=/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin']
               }
-              withEnv(env) {
-                if(oss != "c3i-docker"){
-                    withPythonEnv('python'){
+              try{
+                  // REMOVE THIS!!!
+                  if profile.contains("Debug"){
+                    throw new Exception("I made this fail, because I'm evil")
+                  }
+
+                  withEnv(env) {
+                    if(oss != "c3i-docker"){
+                        withPythonEnv('python'){
+                            Process(build_folder, commit, url, profile, ref, arti_instance, credential, repo_name)
+                        }
+                    }
+                    else{
                         Process(build_folder, commit, url, profile, ref, arti_instance, credential, repo_name)
                     }
-                }
-                else{
-                    Process(build_folder, commit, url, profile, ref, arti_instance, credential, repo_name)
-                }
+                  }
+                  def command = $/./c3i/pull_request/bin/set_success.sh ${arti_instance} $$USER_PASS ${repo_name} ${profile_id}/$
+                  sh command
+              }
+              catch(error){
+                def command = $/./c3i/pull_request/bin/set_failed.sh ${arti_instance} $$USER_PASS ${repo_name} ${profile_id}/$
+                sh command
+                throw error
               }
             }
           }
